--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  animated_text_kit: ^4.2.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
