--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   - assets/img/
   - assets/img/loginPage/
   - assets/img/mainPage/
+  - assets/img/pokerCard/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
