added the wait until Player Action function , and created the player icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   - assets/img/loginPage/
   - assets/img/mainPage/
   - assets/img/pokerCard/
+  - assets/img/playerIcon/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
