--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   animated_text_kit: ^4.2.1
+  flutter_launcher_icons: ^0.13.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: 'assets/img/icon/icon.jpg'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
