--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
 
   animated_text_kit: ^4.2.1
   flutter_launcher_icons: ^0.13.1
+  flick_video_player: ^0.9.0
+  video_player: ^2.9.1
+
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - assets/videos/
   - assets/img/
   - assets/img/loginPage/
   - assets/img/mainPage/
