--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
   - assets/img/mainPage/
   - assets/img/pokerCard/
   - assets/img/playerIcon/
+  - assets/img/resultPage/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
