read and write userData (wip)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   video_player: ^2.9.1
   audioplayers: ^5.2.1
   avatar_glow: ^3.0.1
+  shared_preferences: ^2.3.2
 
 
 dev_dependencies:
