--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   audioplayers: ^5.2.1
   avatar_glow: ^3.0.1
   shared_preferences: ^2.3.2
+  path_provider: ^2.0.11 
 
 
 dev_dependencies:
@@ -84,6 +85,7 @@ flutter:
   - assets/img/pokerCard/
   - assets/img/playerIcon/
   - assets/img/resultPage/
+  - assets/img/background/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
