--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   avatar_glow: ^3.0.1
   shared_preferences: ^2.3.2
   path_provider: ^2.0.11 
+  intl: ^0.19.0
 
 
 dev_dependencies:
